--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,35 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Data files (don't upload large datasets)
+*.csv
+*.xlsx
+data/raw/
+data/processed/
+
+# Model files (too large for GitHub)
+*.pkl
+*.joblib
+*.h5
+*.pth
+models/
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+*/.ipynb_checkpoints/*
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
